--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^4.5.10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-spinner": "^1.0.4",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.11"
   },
