--- a/package.json
+++ b/package.json
@@ -7,28 +7,31 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "core-js": "^3.21.1",
+    "axios": "^1.4.0",
+    "core-js": "^3.32.1",
     "cors": "^2.8.5",
-    "jquery": "^3.6.0",
+    "jquery": "^3.7.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
-    "vee-validate": "^4.5.10",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vee-validate": "^4.11.1",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "vue-spinner": "^1.0.4",
-    "vuex": "^4.0.0-0",
-    "yup": "^0.32.11"
+    "vuex": "^4.1.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.0.0",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  },
+  "engines": {
+    "node": ">=17.0.0"
   },
   "browserslist": [
     "> 1%",
